@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 15:46:29 brook Exp $
+
+R_PKGNAME=	tensorA
+R_PKGVER=	0.36.1
+CATEGORIES=	math
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Advanced tensor arithmetic with named indices
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
