@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:46:29 brook Exp $
+
+SHA1 (R/tensorA_0.36.1.tar.gz) = 0c3ddd01c43fa3853684605a8be16fee4ec95a48
+RMD160 (R/tensorA_0.36.1.tar.gz) = d89d74b492579dca5f569ab465b78dd855d8f57f
+SHA512 (R/tensorA_0.36.1.tar.gz) = bb03707e71d490cee8a41a44af5f6b83df6933ef0e84f9ce1695ace4611bac2d9826cb104bec6faadd3b73203ccb5e0230ea5ef203a36778dbe360dbb0801d60
+Size (R/tensorA_0.36.1.tar.gz) = 47051 bytes
