@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3326 2019/08/09 15:43:47 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3327 2019/08/09 15:46:29 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5450,3 +5450,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added finance/R-bayesm version 3.1.3 [brook 2019-08-09]
 	Added math/R-energy version 1.7.6 [brook 2019-08-09]
 	Added math/R-DEoptimR version 1.0.8 [brook 2019-08-09]
+	Added math/R-tensorA version 0.36.1 [brook 2019-08-09]
